--- a/app/src/main/res/layout/content_single_note.xml
+++ b/app/src/main/res/layout/content_single_note.xml
@@ -58,7 +58,7 @@
                 android:hint="@string/time_of_day_hint">
 
                 <android.support.design.widget.TextInputEditText
-                    android:id="@+id/tod"
+                    android:id="@+id/time"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="textCapWords" />
@@ -80,11 +80,24 @@
                 android:layout_height="match_parent">
 
                 <android.support.design.widget.TextInputEditText
+                    android:id="@+id/gear"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/gear_hint" />
+            </android.support.design.widget.TextInputLayout>
+
+
+            <android.support.design.widget.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <android.support.design.widget.TextInputEditText
                     android:id="@+id/description"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="@string/description_hint" />
             </android.support.design.widget.TextInputLayout>
+
 
         </LinearLayout>
     </ScrollView>
