Added working up navigation to the action bar. Delete button is present in action bar now too but is not implemented.

--- a/app/src/main/res/menu/menu_single_note.xml
+++ b/app/src/main/res/menu/menu_single_note.xml
@@ -3,8 +3,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.example.android.compositioncollector.NoteActivity">
     <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="100"
-        android:title="@string/action_settings"
-        app:showAsAction="never" />
+        android:id="@+id/action_delete"
+        android:checkable="false"
+        android:enabled="false"
+        android:icon="@android:drawable/ic_menu_delete"
+        android:title="@string/button_delete"
+        android:visible="true"
+        app:showAsAction="always" />
 </menu>
