Working delete button is now present.

--- a/app/src/main/res/menu/menu_single_note.xml
+++ b/app/src/main/res/menu/menu_single_note.xml
@@ -4,8 +4,7 @@
     tools:context="com.example.android.compositioncollector.NoteActivity">
     <item
         android:id="@+id/action_delete"
-        android:checkable="false"
-        android:enabled="false"
+        android:enabled="true"
         android:icon="@android:drawable/ic_menu_delete"
         android:title="@string/button_delete"
         android:visible="true"
