UI overhaul. Added a custom style.

--- a/app/src/main/res/layout/note_list_entry.xml
+++ b/app/src/main/res/layout/note_list_entry.xml
@@ -3,8 +3,10 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="16dp">
+
     <TextView
+        android:id="@+id/list_entry_slot"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/list_entry_slot"/>
+        android:textAppearance="@android:style/TextAppearance.Material.Medium" />
 </FrameLayout>
