--- a/app/src/main/res/menu/menu_single_note.xml
+++ b/app/src/main/res/menu/menu_single_note.xml
@@ -5,7 +5,7 @@
     <item
         android:id="@+id/action_delete"
         android:enabled="true"
-        android:icon="@android:drawable/ic_menu_delete"
+        android:icon="@drawable/ic_baseline_delete_24px"
         android:title="@string/button_delete"
         android:visible="true"
         app:showAsAction="always" />
