--- a/app/src/main/res/menu/menu_single_note.xml
+++ b/app/src/main/res/menu/menu_single_note.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.example.android.compositioncollector.NoteActivity">
+    tools:context="com.noahwc.compositioncollector.NoteActivity">
     <item
         android:id="@+id/action_delete"
         android:enabled="true"
