--- a/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
@@ -1,34 +1,68 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
     android:width="108dp"
     android:height="108dp"
-    android:viewportHeight="108"
-    android:viewportWidth="108">
-    <path
-        android:fillType="evenOdd"
-        android:pathData="M32,64C32,64 38.39,52.99 44.13,50.95C51.37,48.37 70.14,49.57 70.14,49.57L108.26,87.69L108,109.01L75.97,107.97L32,64Z"
-        android:strokeColor="#00000000"
-        android:strokeWidth="1">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="78.5885"
-                android:endY="90.9159"
-                android:startX="48.7653"
-                android:startY="61.0927"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
-    <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M66.94,46.02L66.94,46.02C72.44,50.07 76,56.61 76,64L32,64C32,56.61 35.56,50.11 40.98,46.06L36.18,41.19C35.45,40.45 35.45,39.3 36.18,38.56C36.91,37.81 38.05,37.81 38.78,38.56L44.25,44.05C47.18,42.57 50.48,41.71 54,41.71C57.48,41.71 60.78,42.57 63.68,44.05L69.11,38.56C69.84,37.81 70.98,37.81 71.71,38.56C72.44,39.3 72.44,40.45 71.71,41.19L66.94,46.02ZM62.94,56.92C64.08,56.92 65,56.01 65,54.88C65,53.76 64.08,52.85 62.94,52.85C61.8,52.85 60.88,53.76 60.88,54.88C60.88,56.01 61.8,56.92 62.94,56.92ZM45.06,56.92C46.2,56.92 47.13,56.01 47.13,54.88C47.13,53.76 46.2,52.85 45.06,52.85C43.92,52.85 43,53.76 43,54.88C43,56.01 43.92,56.92 45.06,56.92Z"
-        android:strokeColor="#00000000"
-        android:strokeWidth="1" />
+    android:viewportWidth="1308.1761"
+    android:viewportHeight="1308.1761">
+    <group android:translateX="214.08804"
+        android:translateY="214.08804">
+        <path
+            android:pathData="M0,0l880,0l0,880l-880,0z"
+            android:fillColor="#000000"
+            android:fillAlpha="0"/>
+        <path
+            android:pathData="M90,20l700,0l0,840l-700,0z"
+            android:fillColor="#000000"
+            android:fillAlpha="0"/>
+        <path
+            android:pathData="M90,20h700v840h-700z"
+            android:fillColor="#EEEEEE"/>
+        <path
+            android:pathData="M130,56h620v620h-620z"
+            android:fillColor="#ffffff"/>
+        <path
+            android:pathData="M372,460l136.875,0l0,138.882l-136.875,0z"
+            android:fillColor="#000000"
+            android:fillAlpha="0"/>
+        <path
+            android:pathData="M376.69,464.69h127.496v129.502h-127.496z"
+            android:strokeWidth="9.37944"
+            android:fillColor="#E0E0E0"
+            android:strokeColor="#AEAEAE"/>
+        <path
+            android:pathData="M409.5,526.629L471.375,526.629"
+            android:strokeWidth="6.56561"
+            android:fillColor="#00000000"
+            android:strokeColor="#AEAEAE"/>
+        <path
+            android:pathData="M409.5,556.657L471.375,556.657"
+            android:strokeWidth="6.56561"
+            android:fillColor="#00000000"
+            android:strokeColor="#AEAEAE"/>
+        <path
+            android:pathData="M580.621,352.142C580.621,429.892 517.654,492.905 440,492.905C362.346,492.905 299.379,429.892 299.379,352.142C299.379,274.393 362.346,211.379 440,211.379C517.654,211.379 580.621,274.393 580.621,352.142Z"
+            android:strokeWidth="9.37944"
+            android:fillColor="#FFFF72"
+            android:strokeColor="#FFEB3B"/>
+        <path
+            android:pathData="M432,88h16v80h-16z"
+            android:fillColor="#FFEB3B"/>
+        <path
+            android:pathData="M624,342h80v16h-80z"
+            android:fillColor="#FFEB3B"/>
+        <path
+            android:pathData="M176,342h80v16h-80z"
+            android:fillColor="#FFEB3B"/>
+        <path
+            android:pathData="M624.569,156l11.314,11.314l-56.569,56.569l-11.314,-11.314z"
+            android:fillColor="#FFEB3B"/>
+        <path
+            android:pathData="M244,167.314l11.314,-11.314l56.569,56.569l-11.314,11.314z"
+            android:fillColor="#FFEB3B"/>
+        <path
+            android:pathData="M130,710h464v32h-464z"
+            android:fillColor="#BCBCBC"/>
+        <path
+            android:pathData="M130,776h568v34h-568z"
+            android:fillColor="#BCBCBC"/>
+    </group>
 </vector>
